2008-07-24  Lee-Shawn Chin <L.S.Chin@rl.ac.uk>

	* src/utils/*.c, src/serial/*.c: Further removal of checks to errno (missed out during previous update)

2008-07-13  Lee-Shawn Chin <L.S.Chin@rl.ac.uk>

	* autogen.sh, example/circles_mb/autogen.sh: Added version checks for automake and autoconf
	* example/circles_mb/configure.ac: Added option to specify libexpat installation path

2008-07-12  Lee-Shawn Chin <L.S.Chin@rl.ac.uk>

	* configure.ac m4/*.m4: Implemented better configuration checks for MPI and Pthreads
	* Makefile.am, */Makefile.am: Updated to match changes in *.m4 
	
	* include/*.h, */*.c: Headers (apart from mboard.h and uthash.h) renamed to mb_*.h to avoid conflicts with existing headers
	* Makefile.am: Only mboard.h and mb_objmap.h are installed
	
	* src/utils/objmap.c: Renamed map_t type declaration which clashes with those defined in AIX system header files 

	* : Builds and runs fine on bglogin2 (Bluegene/P) - using cc defined by `mpicc -show`
	* : Builds and runs fine on HPCx (IBM AIX) - tested with gcc and xlc_r
	* : Builds and runs fine on HAPU (HP Cluster Platform 4000) - tested with gcc and pgcc
	* : Builds and runs fine on SCARF (Based on RHEL4.4) - tested with gcc, icc and pgcc
	
	* Tagged as 0.1.3-alpha
	
2008-06-27	Lee-Shawn Chin <L.S.Chin@rl.ac.uk>
	
	* comm.c, tests/testsuite_commroutines/test_cr1.c: update to solve bug with board->locked status being updated prematurely.
	* src/parallel/*.c: removed checks on errno as they sometimes pick up values from non-blocking MPI routines.
	
	* m4/check_parallel, m4/check_testing: properly define export *_LDFLAGS and *_LIBS
	* configure.ac, */Makefile.am: now possible to override CFLAGS during 'make'
	* example/circles_mb/configure.ac, example/circles_mb/Makefile.am, 
	  m4/check_mboard: updated to reflect changes in main configure.ac and m4/*
	
	* tests/Makefile.am, tests/*/Makefile.am: testsuites now have assertion enabled, and uses the debug versions of libs
	  