@@ -14,7 +14,7 @@ AM_INIT_AUTOMAKE
 # default CFLAGS
 NORMAL_CFLAGS="-Wall -pedantic -O3 -g"
 
-PARALLEL_EXTRA_CFLAGS=" -std=c9x -D_PARALLEL"
+PARALLEL_EXTRA_CFLAGS=" -std=c9x"
 
 AC_SUBST(PARALLEL_EXTRA_CFLAGS)
 
