@@ -7,7 +7,7 @@
 AC_DEFUN([MBOARD_CHECK_PARALLEL], [
 
 MB_EXTRA_LDFLAGS=""
-MB_EXTRA_CFLAGS=""
+MB_EXTRA_CFLAGS="-D_PARALLEL"
 MB_EXTRA_LIBS="-lm"
 
 # C compiler is required
