@@ -2,6 +2,8 @@
 
 	* src/utils/*.c, src/serial/*.c: Further removal of checks to errno (missed out during previous update)
 
+	* src/utils/objmap.c, include/mb_objmap.h: ObjectMapper is now thread-safe
+	
 2008-07-13  Lee-Shawn Chin <L.S.Chin@rl.ac.uk>
 
 	* autogen.sh, example/circles_mb/autogen.sh: Added version checks for automake and autoconf
